--- a/index.css
+++ b/index.css
@@ -92,7 +92,37 @@ a:hover {
   width: 80%;
   margin: auto;
 }
+.resumeLink .noselect {
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	-webkit-tap-highlight-color: transparent;
+}
 
+.resumeLink button {
+	width: 200px;
+	height: 50px;
+	cursor: pointer;
+	font-size: 20px;
+	font-weight: bold;
+	color: black;
+	background: rgb(119, 238, 119);
+	border: 2px solid black;
+	box-shadow: 5px 5px 0 black, -5px -5px 0 black, -5px 5px 0 black,
+		5px -5px 0 black;
+	transition: 500ms ease-in-out;
+}
+
+.resumeLink button:hover {
+	box-shadow: 20px 5px 0 black, -20px -5px 0 black;
+}
+
+.resumeLink button:focus {
+	outline: none;
+}
 .eachCard {
   box-shadow: 0 6px 10px 2px rgba(0, 0, 0, 0.4);
   width: 80%;
