--- a/index.css
+++ b/index.css
@@ -86,6 +86,29 @@ a:hover {
   color: #f1f1f1;
 }
 
+@keyframes background-text-animation {
+  0%{
+    background-position: left 0px top 50%;
+  }
+  50%{
+    background-position: left 1500px top 50%;
+  }
+  100%{
+    background-position: left 0px top 50%;
+  }
+}
+
+.sideNavbar a{
+  color: rgba(201, 240, 192, 0.7);
+/*   font-size: 100px; */
+  text-transform: uppercase;
+  font-weight: 1000; 
+  background-size: cover;
+  background-image: url(https://cdn-images-1.medium.com/max/2000/1*Jalb56N34pBIGCjQULtW3A.jpeg);
+  -webkit-background-clip: text;
+  animation: background-text-animation 85s linear infinite;
+}
+
 .mainContent {
   background-color: #ffffff;  
   margin-left: 520px;
@@ -184,8 +207,6 @@ a:hover {
   100% { background-position: 0 0; }
 }
 
-
-
 .eachCard {
   box-shadow: 0 6px 10px 2px rgba(0, 0, 0, 0.4);
   width: 80%;
@@ -222,6 +243,7 @@ header img {
   width: 70px;
   height: 70px;
 }
+
 
 .findMeInner {
   display: flex;
@@ -280,6 +302,17 @@ header img {
   font-size: 60px;
 }
 
+
+ h1, h2, h3, h4, h5, h6{
+  font-family: 'Righteous', 'cursive';
+  background:url('https://media.giphy.com/media/FE0WTM8BG754I/giphy.gif') center center no-repeat;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-size:cover;
+  margin:auto;
+  margin-left: 0;
+  color:transparent;
+}
 
 
 @media (max-width:1100px){
